<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.vitin.mylaptop.project2_tipcalculator.MainActivity">


   
        <!-- The bill amount -->

        <TextView
            android:id="@+id/billAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bill_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/billAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/billAmountLabel"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/billAmountLabel"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/bill_amount"
            android:textSize="20sp" >

            <requestFocus />
        </EditText>

        <!-- The tip percent -->

        <TextView
            android:id="@+id/percentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/billAmountLabel"
            android:layout_below="@+id/billAmountLabel"
            android:padding="10dp"
            android:text="@string/tip_percent_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percentTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/percentLabel"
            android:layout_alignLeft="@+id/billAmountEditText"
            android:padding="5dp"
            android:text="@string/tip_percent"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/percentSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/percentLabel"
            android:layout_toRightOf="@+id/percentTextView"
            android:max="30"
            android:padding="10dp"
            android:progress="15" />
        <!-- apply button -->

        <!-- the tip amount -->

        <TextView
            android:id="@+id/tipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/percentLabel"
            android:layout_below="@+id/percentLabel"
            android:padding="10dp"
            android:text="@string/tip_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tipLabel"
            android:layout_alignLeft="@id/billAmountEditText"
            android:padding="5dp"
            android:text="@string/tip_amount"
            android:textSize="20sp" />

        <!-- the total -->

        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tipLabel"
            android:layout_below="@+id/tipLabel"
            android:padding="10dp"
            android:text="@string/total_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/totalLabel"
            android:layout_alignLeft="@+id/tipTextView"
            android:padding="5dp"
            android:text="@string/total_amount"
            android:textSize="20sp" />



</RelativeLayout>
